--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 h1 {
-    color: aqua;
+  color: aqua;
+  font-size: 30px;
 }
+
+/*# sourceMappingURL=style.css.map */
