--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
 @import 'base/reset';
 
 //componentes
-@import 'componentes/navbar';
+@import 'components/navbar';
 @import 'components/footer';
 
 //layouts
