--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,46 @@
   box-sizing: border-box;
 }
 
+.header {
+  background-color: black;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+  transition: 0.4s;
+}
+
+.logo-header {
+  height: 100px;
+}
+
+.nav-link:hover {
+  color: grey;
+}
+
 h1 {
   color: aqua;
   font-size: 30px;
+}
+
+section p {
+  color: palevioletred;
+}
+
+section img {
+  width: 100%;
+  object-fit: cover;
+  height: 600px;
 }
 
 /*# sourceMappingURL=style.css.map */
