--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -2,7 +2,26 @@
     background-color: black;
 }
 
-li a {
+ul {
     display: flex;
     flex-direction: row;
+    gap: 30px;
+    justify-content: center;
+    align-items: center;
 }
+
+.nav-link {
+    color: white;
+    text-decoration: none;
+    font-size: 30px;
+    transition: 0.4s;
+}
+
+.logo-header {
+    height: 100px;
+}
+
+.nav-link:hover {
+    color: grey;
+}
+
