--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -3,6 +3,12 @@ h1 {
     font-size: 30px;
 }
 
-p {
+section p {
     color: palevioletred;
+}
+
+section img {
+    width: 100%;
+    object-fit: cover;
+    height: 600px;
 }
