--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,14 +1,41 @@
-h1 {
-    color: aqua;
-    font-size: 30px;
-}
-
-section p {
-    color: palevioletred;
-}
-
 section img {
     width: 100%;
     object-fit: cover;
     height: 600px;
+}
+
+.cards {
+    margin: 20px 50px;
+    display: flex;
+    flex-direction: column;
+}
+
+.cards:first-child {
+    align-items: flex-end;
+}
+
+.cards-div {
+    width: 1000px;
+    margin-bottom: 30px;
+    display: flex;
+    border: 4px solid white;
+    border-radius: 7px;
+    align-items: center;    
+}  
+
+.cards-div img {
+    width: 55%;
+    height: 300px;
+    object-fit: cover;
+    justify-content: center;
+}
+
+.text-cards {
+    width: 45%;
+    padding: 15px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    color: white;
+    font-size: 16px;  
 }
