--- a/css/style.css
+++ b/css/style.css
@@ -33,28 +33,42 @@ ul {
   color: grey;
 }
 
+hr {
+  color: white;
+}
+
+footer img {
+  display: flex;
+  width: 500px;
+  height: 211px;
+  align-items: center;
+}
+
 section img {
   width: 100%;
   object-fit: cover;
   height: 600px;
 }
 
-.cards {
+.cards-section {
   margin: 20px 50px;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
-.cards:first-child {
-  align-items: flex-end;
+.cards {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  width: 800px;
 }
 
 .cards-div {
-  width: 1000px;
   margin-bottom: 30px;
   display: flex;
   border: 4px solid white;
-  border-radius: 7px;
+  border-radius: 15px;
   align-items: center;
 }
 
@@ -63,6 +77,7 @@ section img {
   height: 300px;
   object-fit: cover;
   justify-content: center;
+  border-radius: 5px;
 }
 
 .text-cards {
