--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -4,23 +4,26 @@ section img {
     height: 600px;
 }
 
-.cards {
+.cards-section {
     margin: 20px 50px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
-.cards:first-child {
-    align-items: flex-end;
+.cards {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    width: 800px;
 }
 
 .cards-div {
-    width: 1000px;
     margin-bottom: 30px;
     display: flex;
     border: 4px solid white;
-    border-radius: 7px;
-    align-items: center;    
+    border-radius: 15px;
+    align-items: center;   
 }  
 
 .cards-div img {
@@ -28,6 +31,7 @@ section img {
     height: 300px;
     object-fit: cover;
     justify-content: center;
+    border-radius: 5px;
 }
 
 .text-cards {
