--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,7 +1,7 @@
 section img {
     width: 100%;
     object-fit: cover;
-    height: 600px;
+    height: 90vh;
 }
 
 .cards-section {
@@ -16,6 +16,11 @@ section img {
     flex-direction: column;
     align-items: end;
     width: 800px;
+    transition: 0.4s;
+
+    &:hover {
+        width: 900px;
+    }
 }
 
 .cards-div {
@@ -24,15 +29,15 @@ section img {
     border: 4px solid white;
     border-radius: 15px;
     align-items: center;   
-}  
 
-.cards-div img {
-    width: 55%;
-    height: 300px;
-    object-fit: cover;
-    justify-content: center;
-    border-radius: 5px;
-}
+    img {
+        width: 55%;
+        height: 300px;
+        object-fit: cover;
+        justify-content: center;
+        border-radius: 5px;
+    }
+}  
 
 .text-cards {
     width: 45%;
