--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -2,9 +2,23 @@ hr {
     color: white;
 }
 
-footer img {
-    display: flex;
-    width: 500px;
-    height: 211px;
-    align-items: center;
+footer p {
+    color: white;
+    text-align: center;
+    padding-bottom: 39px;
 }
+
+.redes {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 30px;
+    gap: 20px;
+
+    img {
+        width: 90px;
+        height: 90px;
+    }
+}
+
+
