Trabaje sobre las pestalas de ssions, generando cada una de la pags respectivas a los a;os. Mejore la galeria

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,4 +8,10 @@
 //layouts
 @import 'layout/index';
 @import 'layout/shows';
-@import 'layout/galeria'
+@import 'layout/galeria';
+@import 'layout/sessions';
+@import 'layout/sessions';
+
+//layouts años 
+@import 'layout/años';
+
