--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ ul {
   color: grey;
 }
 
-hr {
-  color: white;
+footer hr {
+  margin-top: 1000px;
 }
 
 footer p {
@@ -58,7 +58,7 @@ footer p {
 section img {
   width: 100%;
   object-fit: cover;
-  height: 90vh;
+  height: 100vh;
 }
 
 .cards-section {
@@ -72,7 +72,8 @@ section img {
   display: flex;
   flex-direction: column;
   align-items: end;
-  width: 800px;
+  width: 700px;
+  height: 600px;
   transition: 0.4s;
 }
 .cards:hover {
@@ -87,10 +88,9 @@ section img {
   align-items: center;
 }
 .cards-div img {
-  width: 55%;
-  height: 300px;
+  width: 50%;
+  height: 100%;
   object-fit: cover;
-  justify-content: center;
   border-radius: 5px;
 }
 
@@ -98,8 +98,6 @@ section img {
   width: 45%;
   padding: 15px;
   justify-content: center;
-  text-align: center;
-  align-items: center;
   color: white;
   font-size: 16px;
 }
@@ -256,6 +254,177 @@ hr {
 }
 .c12:hover {
   transform: scale(1.05, 1.05);
+}
+
+.discografia {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  gap: 200px;
+}
+
+.parte1 {
+  margin: 0px 40px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.parte2 {
+  margin: 0px 40px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.doscerounonueve a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: brown;
+}
+.doscerounonueve a:hover {
+  filter: opacity(0.75);
+}
+
+.doscerodoscero a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: cadetblue;
+}
+.doscerodoscero:hover {
+  filter: opacity(0.75);
+}
+
+.doscerodosuno a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: crimson;
+}
+.doscerodosuno:hover {
+  filter: opacity(0.75);
+}
+
+.doscerodosdos a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: darkviolet;
+}
+.doscerodosdos:hover {
+  filter: opacity(0.75);
+}
+
+.doscerodostres a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: palevioletred;
+}
+.doscerodostres:hover {
+  filter: opacity(0.75);
+}
+
+.discografia {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  gap: 200px;
+}
+
+.parte1 {
+  margin: 0px 40px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.parte2 {
+  margin: 0px 40px;
+  margin-top: 200px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.doscerounonueve a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: brown;
+}
+.doscerounonueve a:hover {
+  filter: opacity(0.75);
+}
+
+.doscerodoscero a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: cadetblue;
+}
+.doscerodoscero:hover {
+  filter: opacity(0.75);
+}
+
+.doscerodosuno a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: crimson;
+}
+.doscerodosuno:hover {
+  filter: opacity(0.75);
+}
+
+.doscerodosdos a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: darkviolet;
+}
+.doscerodosdos:hover {
+  filter: opacity(0.75);
+}
+
+.doscerodostres a {
+  text-decoration: none;
+  color: white;
+  padding: 150px;
+  background-color: palevioletred;
+}
+.doscerodostres:hover {
+  filter: opacity(0.75);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.primeras, .segundas, .terceras, .cuartas, .quintas, .sextas, .septimas {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+  margin: 10px 50px;
+  justify-content: center;
+  overflow: hidden;
+}
+.primeras .session, .segundas .session, .terceras .session, .cuartas .session, .quintas .session, .sextas .session, .septimas .session {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.primeras .session a, .segundas .session a, .terceras .session a, .cuartas .session a, .quintas .session a, .sextas .session a, .septimas .session a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
 }
 
 /*# sourceMappingURL=style.css.map */
