--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,7 +1,7 @@
 section img {
     width: 100%;
     object-fit: cover;
-    height: 90vh;
+    height: 100vh;
 }
 
 .cards-section {
@@ -15,7 +15,8 @@ section img {
     display: flex;
     flex-direction: column;
     align-items: end;
-    width: 800px;
+    width: 700px;
+    height: 600px;
     transition: 0.4s;
 
     &:hover {
@@ -31,10 +32,9 @@ section img {
     align-items: center;   
 
     img {
-        width: 55%;
-        height: 300px;
+        width: 50%;
+        height: 100%;
         object-fit: cover;
-        justify-content: center;
         border-radius: 5px;
     }
 }  
@@ -43,8 +43,6 @@ section img {
     width: 45%;
     padding: 15px;
     justify-content: center;
-    text-align: center;
-    align-items: center;
     color: white;
     font-size: 16px;  
 }
