--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,7 @@
 ul {
   display: flex;
   flex-direction: row;
-  gap: 30px;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -56,7 +55,7 @@ footer p {
 }
 
 section img {
-  width: 100%;
+  width: 96%;
   object-fit: cover;
   height: 100vh;
 }
@@ -102,21 +101,19 @@ section img {
   font-size: 16px;
 }
 
-main {
-  display: flex;
-  flex-direction: row;
-}
-main img {
+img {
   margin: 30px;
   height: 800px;
 }
 
 .shows-america {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-left: 600px;
+  justify-content: space-evenly;
   gap: 30px;
+}
+.shows-america img {
+  width: 30%;
+  justify-content: left;
 }
 
 .lugares {
@@ -124,6 +121,7 @@ main img {
   flex-direction: column;
   gap: 20px;
   color: white;
+  margin-top: 45px;
 }
 .lugares .lugares-text {
   color: white;
