--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -5,8 +5,7 @@
 ul {
     display: flex;
     flex-direction: row;
-    gap: 30px;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
