--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@
 .header {
   background-color: rgba(0, 0, 0, 0);
 }
-
-ul {
+.header ul {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -33,7 +32,7 @@ ul {
 }
 
 footer hr {
-  margin-top: 1000px;
+  margin-top: 80px;
 }
 
 footer p {
@@ -55,7 +54,7 @@ footer p {
 }
 
 section img {
-  width: 96%;
+  width: 100%;
   object-fit: cover;
   height: 100vh;
 }
@@ -70,9 +69,10 @@ section img {
 .cards {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: center;
+  margin: 60px;
   width: 700px;
-  height: 600px;
+  height: 400px;
   transition: 0.4s;
 }
 .cards:hover {
@@ -80,7 +80,7 @@ section img {
 }
 
 .cards-div {
-  margin-bottom: 30px;
+  height: 400px;
   display: flex;
   border: 4px solid white;
   border-radius: 15px;
@@ -275,6 +275,7 @@ hr {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 .doscerounonueve a {
@@ -348,6 +349,7 @@ hr {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 .doscerounonueve a {
@@ -423,6 +425,11 @@ main {
   text-decoration: none;
   color: white;
   font-size: 24px;
+  text-align: center;
+}
+.primeras .session img, .segundas .session img, .terceras .session img, .cuartas .session img, .quintas .session img, .sextas .session img, .septimas .session img {
+  width: 530px;
+  height: 300px;
 }
 
 /*# sourceMappingURL=style.css.map */
