--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,5 +1,5 @@
 section img {
-    width: 96%;
+    width: 100%;
     object-fit: cover;
     height: 100vh;    
 }
@@ -14,10 +14,12 @@ section img {
 .cards {
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: center;
+    margin: 60px;
     width: 700px;
-    height: 600px;
+    height: 400px;
     transition: 0.4s;
+
 
     &:hover {
         width: 900px;
@@ -25,7 +27,7 @@ section img {
 }
 
 .cards-div {
-    margin-bottom: 30px;
+    height: 400px;
     display: flex;
     border: 4px solid white;
     border-radius: 15px;
