--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -5,19 +5,20 @@ footer hr {
 footer p {
     color: white;
     text-align: center;
-    padding-bottom: 39px;
+    padding-bottom: 40px;
 }
 
 .redes {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 30px;
-    gap: 20px;
+    align-items: center;
+/*     padding: 30px; */
+
 
     img {
-        width: 90px;
-        height: 90px;
+        width: 45px;
+        height: 45px;
     }
 }
 
