--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,8 @@
 @import 'layout/galeria';
 @import 'layout/sessions';
 @import 'layout/sessions';
-
-//layouts años 
+@import 'layout/mediaqueries';
 @import 'layout/años';
+
+
 
