--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,10 +1,14 @@
  .header {
     background-color: #0000;
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
 
     ul {
         display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
+        flex-direction: column;
+        gap: 10px;
+        justify-content: center;
         align-items: center;
     }
 }
