--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,7 +1,10 @@
 section img {
-    width: 96%;
+    width: 370px;
+    height: 500px;   
+    justify-content: center;
     object-fit: cover;
-    height: 100vh;    
+    align-self: center; 
+
 }
 
 .cards-section {
@@ -15,15 +18,17 @@ section img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 60px;
-    width: 700px;
-    height: 400px;
+    justify-content: center;
+    width: 400px;
+    height: 100px;
     transition: 0.4s;
+    margin-bottom: 220px;
+    margin-top: 20px;
 
-
-    &:hover {
-        width: 900px;
+    .text-cards {
+        text-align: justify;
     }
+
 }
 
 .cards-div {
@@ -45,6 +50,7 @@ section img {
     width: 45%;
     padding: 15px;
     justify-content: center;
+    align-items: center;
     color: white;
-    font-size: 16px;  
+    font-size: 8px;  
 }
